# ultrawm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-test-release.yaml
cli/: Cargo.toml  build.rs  build_macos_app.sh
cli/assets/: icon.psd
cli/src/: accelerator.rs  cli.rs  context_menu.rs  error_dialog.rs  logger.rs  main.rs  menu_helpers.rs  menu_system.rs  tray.rs
lib/application-services/: Cargo.toml
lib/application-services/src/: accessibility_ui.rs  lib.rs
lib/macos/application-services/: Cargo.toml  build.rs
lib/macos/application-services/src/: accessibility_ui.rs  accessibility_value.rs  lib.rs
lib/ultrawm/: Cargo.toml
lib/ultrawm-core/: Cargo.toml
lib/ultrawm-core/examples/: 1_list_windows.rs  2_list_displays.rs  3_get_mouse_position.rs  4_event_loop.rs
lib/ultrawm-core/src/: animation.rs  coalescing_channel.rs  config.rs  drag_handle.rs  drag_handler.rs  drag_tracker.rs  event_loop_main.rs  event_loop_wm.rs  handle_tracker.rs  keybind.rs  lib.rs  mod_mouse_keybind_tracker.rs  modified_mouse_keybind_tracker.rs  overlay_window.rs  partition.rs  paths.rs  resize_handle.rs  resize_handle_tracker.rs  resize_handler.rs  serialization.rs  serialize.rs  thread_lock.rs  tile_preview_handler.rs  tile_result.rs  tray.rs  window.rs  window_area_handler.rs  window_area_tracker.rs  window_move_handler.rs  window_resize_handler.rs  wm.rs  workspace.rs  workspace_animator.rs
lib/ultrawm-core/src/ai/: client.rs  layout.rs  mod.rs
lib/ultrawm-core/src/commands/: mod.rs  registry.rs
lib/ultrawm-core/src/config/: config.rs  config_serializer.rs  input_combo.rs  keybind.rs  mod.rs
lib/ultrawm-core/src/event_handlers/: command_handler.rs  command_registry.rs  commands.rs  context_menu_handler.rs  focus_on_hover_handler.rs  keyboard_keybind_tracker.rs  mod.rs  mod_mouse_keybind_tracker.rs  mod_transform_handler.rs  mod_transform_tracker.rs  native_transform_handler.rs  native_transform_tracker.rs  resize_handle_handler.rs  resize_handle_tracker.rs
lib/ultrawm-core/src/layouts/: mod.rs
lib/ultrawm-core/src/layouts/container_tree/: container.rs  container_tree.rs  container_tree_iterator.rs  mod.rs  serialization.rs  serialize.rs
lib/ultrawm-core/src/layouts/container_tree/container/: container_ref.rs  container_window.rs  mod.rs
lib/ultrawm-core/src/menu/: accelerator.rs  mod.rs  system.rs  utils.rs
lib/ultrawm-core/src/overlay/: config.rs  content.rs  handle.rs  manager.rs  mod.rs
lib/ultrawm-core/src/overlay/overlays/: mod.rs  resize_handle_overlay.rs  tile_preview_overlay.rs
lib/ultrawm-core/src/platform/: animation.rs  common.rs  event_bridge.rs  input_state.rs  inteceptor.rs  mod.rs  platform.rs  thread_lock.rs  traits.rs
lib/ultrawm-core/src/platform/macos/: event_listener_ax.rs  event_listener_cg.rs  event_listener_ns.rs  events.rs  main_thread.rs  manageable.rs  mod.rs  overlay.rs  platform.rs  tile_preview.rs  window.rs
lib/ultrawm-core/src/platform/macos/ffi/: consts.rs  ext.rs  mod.rs  private.rs
lib/ultrawm-core/src/platform/mock/: mod.rs
lib/ultrawm-core/src/platform/windows/: events.rs  manageable.rs  mod.rs  overlay.rs  platform.rs  tile_preview.rs  window.rs
lib/ultrawm-core/src/platform/windows/ffi/: mod.rs  private.rs
lib/ultrawm-core/tests/: platform.rs
lib/ultrawm/src/: lib.rs
lib/ultrawm/src/platform/: common.rs  mod.rs
lib/ultrawm/src/platform/macos/: api.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
