[package]
name = "ultrawm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultrawm"
path = "src/main.rs"

[dependencies]
ultrawm-core = { path = "../lib/ultrawm-core" }
ctrlc = "3.4.7"
tray-icon = "0.21.0"
resvg = "0.45.1"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
colored = "3.0.0"
open = "5.3.2"
