[package]
name = "ultrawm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultrawm"
path = "src/main.rs"

[dependencies]
ultrawm-core = { path = "../lib/ultrawm-core" }
ctrlc = "3.4.7"
tray-icon = "0.21.0"
muda = "0.17.1"
resvg = "0.45.1"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
colored = "3.0.0"
open = "5.3.2"
notify = "8.0.0"
winit = "0.30"
native-dialog = "0.9.4"
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Foundation",
] }

[build-dependencies]
winres = "0.1"
image = "0.25"
ico = "0.5.0"
icns = "0.3.1"
