[package]
name = "ultrawm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.10"
cfg-if = "1.0.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
bincode = "1.3.3"
ctrlc = "3.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-graphics = "0.23.1"
application-services = { path = "../macos/application-services" }
icrate = { version = "0.0.4", features = [
    "Foundation_all",
    "AppKit_all",
    "CoreAnimation_all",
] }
objc2 = { version = "0.4.1", features = ["relax-void-encoding"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "UI_UIAutomation",
] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
