[package]
name = "ultrawm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
ctrlc = "3.4.1"
winit = "0.30.11"
skia-safe = { version = "0.86.1", features = ["gl"] }
once_cell = "1.21.3"
dirs = "5.0"
log = "0.4.27"
thiserror = "2.0.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-graphics = "0.23.1"
application-services = { path = "../macos/application-services" }
icrate = { version = "0.0.4", features = [
    "Foundation_all",
    "AppKit_all",
    "CoreAnimation_all",
] }
objc2 = { version = "0.4.1", features = ["relax-void-encoding"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "UI_Composition",
    "UI_Composition_Desktop",
    "UI_Composition_Effects",
    "Graphics_Effects",
    "Foundation",
    "Foundation_Numerics",
    "UI_UIAutomation",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT",
    "System"

] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
win_key_codes = "0.1.2"

[features]
platform-tests = []
