[package]
name = "ultrawm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
winit = "0.30.11"
skia-safe = { version = "0.86.1", features = ["gl"] }
once_cell = "1.21.3"
dirs = "6.0.0"
log = "0.4.27"
thiserror = "2.0.12"
indexmap = "2.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"
application-services = { path = "../macos/application-services" }
objc2 = { version = "0.6.1", features = ["relax-void-encoding"] }
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-quartz-core = "0.3.1"
block2 = "0.6.1"
osakit = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "UI_Composition",
    "UI_Composition_Desktop",
    "UI_Composition_Effects",
    "Graphics_Effects",
    "Foundation",
    "Foundation_Numerics",
    "UI_UIAutomation",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT",
    "System",
] }
win_key_codes = "0.1.2"

[features]
platform-tests = []
